samples/_failures_safe/1761436354_d8ba2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11e0b507.c: In function ‘main’:
./samples/SAFE/__tmp_11e0b507.c:160:16: error: expected ‘;’ at end of input
  160 |     buffer_free
      |                ^
      |                ;
./samples/SAFE/__tmp_11e0b507.c:160:5: error: expected declaration or statement at end of input
  160 |     buffer_free
      |     ^~~~~~~~~~~
